k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api
spec:
  selector:
    app: devops-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
